[package]
name = "ana"
version = "0.10.0-alpha"
description = "A judge in Rust"
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/hr567/Ana"
repository = "https://gitlab.com/hr567/Ana"
authors = ["hr567 <hr567@hr567.me>"]
edition = "2018"
build = "build.rs"

[dependencies]
lazy_static = "1.3.0"
env_logger = "0.7.1"
log = "0.4.8"

async-trait = "0.1.19"
futures = "0.3.1"
tokio = { version = "0.2.4", features = ["full"] }

rand = "0.7.0"
nix = "0.17.0"
tempfile = "3.0.8"

# Command line interface
clap = { version = "2.33.0", features = ["suggestions", "color"] }

# Data serialization/deserialization
serde = { version = "1.0.92", features = ["derive"] }
bincode = "1.1.4"
toml = "0.5.5"

# RPC requirement
tonic = "0.2.0"
prost = "0.6.1"
prost-types = "0.6.1"

[dev-dependencies]
serde_json = "1.0.39"

[build-dependencies]
tonic-build = "0.2.0"

bincode = "1.1.4"
lazy_static = "1.3.0"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"

bindgen = { version = "0.53.0", optional = true }

[features]
default = []
cap-ng = [ "bindgen" ]
seccomp = [ "bindgen" ]

[badges]
gitlab = { repository = "https://gitlab.com/hr567/liboj", branch = "master" }
