[package]
name = "ana"
version = "0.10.0-alpha"
description = "A judge in Rust"
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/hr567/Ana"
repository = "https://gitlab.com/hr567/Ana"
authors = ["hr567 <hr567@hr567.me>"]
edition = "2018"
build = "build.rs"

[dependencies]
lazy_static = "1.4.0"
env_logger = "0.8.2"
log = "0.4.8"

async-trait = "0.1.19"
futures = "0.3.13"
tokio = { version = "1.5.0", features = ["full"] }
tokio-stream = "0.1.5"

rand = "0.8.3"
nix = "0.20.0"
tempfile = "3.0.8"

# Command line interface
clap = { version = "2.33.0", features = ["suggestions", "color"] }

# Data serialization/deserialization
serde = { version = "1.0.92", features = ["derive"] }
bincode = "1.1.4"
toml = "0.5.5"

# RPC requirement
tonic = "0.4.1"
prost = "0.7.0"
prost-types = "0.7.0"

[dev-dependencies]
serde_json = "1.0.39"

[build-dependencies]
tonic-build = "0.4.1"

bincode = "1.1.4"
lazy_static = "1.3.0"
serde = { version = "1.0.92", features = ["derive"] }
serde_json = "1.0.39"

bindgen = { version = "0.58.0", optional = true }

[features]
default = []
cap-ng = [ "bindgen" ]
seccomp = [ "bindgen" ]

[badges]
gitlab = { repository = "https://gitlab.com/hr567/liboj", branch = "master" }
