[package]
name = "ana"
version = "0.10.0-alpha"
description = "A judge in Rust"
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.com/hr567/Ana"
repository = "https://gitlab.com/hr567/Ana"
authors = ["hr567 <hr567@hr567.me>"]
edition = "2018"
build = "build.rs"

[dependencies]
lazy_static = "1.4.0"
env_logger = "0.8.3"
log = "0.4.14"

async-trait = "0.1.50"
futures = "0.3.14"
tokio = { version = "1.8.1", features = ["full"] }
tokio-stream = "0.1.5"

rand = "0.8.3"
nix = "0.20.0"
tempfile = "3.2.0"
num_cpus = "1.13.0"

# Command line interface
clap = { version = "2.33.3", features = ["suggestions", "color"] }

# Data serialization/deserialization
serde = { version = "1.0.125", features = ["derive"] }
bincode = "1.3.3"
toml = "0.5.8"

# RPC requirement
tonic = "0.4.2"
prost = "0.7.0"
prost-types = "0.7.0"

[dev-dependencies]
serde_json = "1.0.64"

[build-dependencies]
tonic-build = "0.4.2"

bincode = "1.3.3"
lazy_static = "1.4.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"

bindgen = { version = "0.58.1", optional = true }

[features]
default = []
cap-ng = [ "bindgen" ]
seccomp = [ "bindgen" ]

[badges]
gitlab = { repository = "https://gitlab.com/hr567/liboj", branch = "master" }
