[package]
name = "ana_judge"
description = "A judge in Rust"
version = "0.3.0"
authors = ["hr567 <hr567@hr567.me>"]
edition = "2018"

[dependencies]
uuid = { version = "0.7", features = ["serde", "v4"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
zmq = "0.8"

ana_compiler = { path = "../ana_compiler" }
ana_launcher = { path = "../ana_launcher" }
ana_mtp = { path = "../ana_mtp" }