[package]
name = "ana_judge"
description = "A judge in Rust"
version = "0.5.0"
authors = ["hr567 <hr567@hr567.me>"]
edition = "2018"

[dependencies]
clap = "2.32"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3"
tokio = "0.1"
zmq = "0.9"

ana_common = { path = "../ana_common" }
ana_communicator = { path = "../ana_communicator" }
ana_compiler = { path = "../ana_compiler" }
ana_diff = { path = "../ana_diff" }
ana_runner = { path = "../ana_runner" }

[dev-dependencies]
uuid = { version = "0.7", features = ["serde", "v4"] }
